[package]
name = "mqtt-bridge"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
config = { version = "0.10", features = ["json"], default-features = false }
indexmap = "1.5"
mqtt3 = { path = "../mqtt3", features = ["serde1"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serial_test = "0.4"
thiserror = "1.0"
tracing = "0.1"

edgelet-client = { path = "../edgelet-client"}
