[package]
name = "generic_mqtt_tester"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
tracing = "0.1"
tokio = { version = "0.2", features = ["rt-util", "rt-threaded", "macros"] }
tracing-subscriber = "0.1"

edgelet-client = { path = "../../../mqtt/edgelet-client" }
mqtt-util = { path = "../../../mqtt/mqtt-util" }
mqtt3 = { path = "../../../mqtt/mqtt3" }